# badukrs

./: .gitignore  Cargo.toml  Dioxus.toml  datatypes.md  devenv.nix  requirements.md  step_1_plan.md
src/: game.rs  main.rs  random_bot.rs
src/rendering/: mod.rs
