[package]
name = "badukrs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version ="0.15", features = ["wayland"]}
indexmap = "2.11.4"
thiserror = "2.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "png",
    "webgl2",
] }
